fix: UI bug fix on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   cursor: none;
+  overflow-x: hidden;
 }
 
 a,
